# alexdrive

./: .mcp.json  CLAUDE.md  alexdrive-key.pem  auth.txt  docker-compose.yml  network-audit.md  package-lock.json  package.json  prompts.md  render.yaml  ssh.txt  vars
.playwright-mcp/: api_detail_models.json  api_foreign_models.json  api_responses.txt  car-data-snapshot.md  car_options.json  chasain_kor_listing.html  chasain_kor_network.txt  common.js  detail_header.html  detail_info.html  detail_search.html  detail_search_rest.html  detail_tables.html  filter_area.html  first_car_row.html  inline_scripts.txt  maker_model_filter.html  model.js  model_search.html  page-2026-04-07T22-37-23-057Z.yml  (+79 more)
alexdrivebackend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
alexdrivebackend/app/: config.py  main.py  models.py
alexdrivebackend/app/parsers/: detail_parser.py  diagnostics.py  filter_parser.py  inspection_parser.py  listing_parser.py
alexdrivebackend/app/routes/: admin.py  cars.py  filters.py  health.py
alexdrivebackend/app/services/: blur.py  carmanager.py  client.py  jenya.py  namsuwon.py  salecars.py  scraper.py  session.py
alexdrivebackend/scripts/: debug_account_block.py  debug_proxy.py
alexdrivebackend/tests/: conftest.py  test_admin_routes.py  test_carmanager.py  test_client.py  test_diagnostics.py  test_jenya.py  test_main.py  test_namsuwon.py  test_salecars.py  test_scraper.py  test_session.py
alexdrivebackend/tests/test_parsers/: test_detail_parser.py  test_filter_parser.py  test_listing_parser.py
carmanager/: makers.py  (+8 more)
(+53 files in other folders)
